Added drop down menus, home and help buttons

--- a/Website/css/ampdStyle.css
+++ b/Website/css/ampdStyle.css
@@ -11,12 +11,12 @@ body {
 .subtext{
     font-family: 'Droid Serif', serif;
     font-weight: 400;
-    font-size: 15px;
+    font-size: 20px;
     color:#999;
     
 }
 #sideBar{
-    margin-top: 30px;
+    margin-top: 10px;
     position:absolute;
     width: 8px;
     height:93px;
@@ -29,9 +29,9 @@ body {
     position:absolute;
     font-family: 'Roboto', sans-serif;   
     font-weight: 300;
-    font-size:20px;
-    color:#fff;  
-    margin-right: 10px;
+    font-size:17px;
+    color:#999;  
+    margin-right: 20px;
     height:100px;
     margin-top:-40px;
     
@@ -128,7 +128,13 @@ a:active {
 .fa-power-off {
     color:#ce301b;
 }
+.fa-question-circle {
+    color:#ce301b;
+}
 .fa-upload {
+    color:#ce301b;
+}
+.fa-home {
     color:#ce301b;
 }
 a#signin {
@@ -245,7 +251,7 @@ li{
     float:left;
     font-family: 'Roboto', sans-serif;   
     font-weight: 100;
-    font-size:100px;
+    font-size:80px;
     color:#fff;
     line-height:110%;
 }
@@ -254,12 +260,13 @@ li{
     float:right;
     font-family: 'Roboto', sans-serif;   
     font-weight: 100;
-    font-size:35px;
+    font-size:25px;
     color:#999;  
-    margin-right:80px;
+    margin-right:180px;
     line-height:110%;
     margin-top:25px;
 }
 #progressBar{
     visibility:hidden;
 }
+
