--- a/Website/css/bootstrap.css
+++ b/Website/css/bootstrap.css
@@ -113,6 +113,7 @@ input,
 optgroup,
 select,
 textarea {
+    resize:none;
   margin: 0;
   font: inherit;
   color: inherit;
@@ -2353,6 +2354,7 @@ output {
   color: #555;
 }
 .form-control {
+    resize:none;
   display: block;
   width: 100%;
   height: 34px;
@@ -2394,6 +2396,7 @@ fieldset[disabled] .form-control {
   opacity: 1;
 }
 textarea.form-control {
+    resize:none;
   height: auto;
 }
 input[type="search"] {
