--- a/Website/css/ampdStyle.css
+++ b/Website/css/ampdStyle.css
@@ -11,7 +11,7 @@ body {
     font-family: 'Droid Serif', serif;
     font-weight: 400;
     font-size: 20px;
-    color: #999;
+    color: #bababa;
     margin-top:20px;
     margin-bottom: 20px;
 }
@@ -136,16 +136,16 @@ a#nextButton {
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
     font-weight: 100;
-    font-size: 30px;
-    color: #999;
+     font-size: 30px;
+    color: #fff;
     float: right;
 }
 a#prevButton {
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
-    font-weight: 100;
+    font-weight: 300;
     font-size: 30px;
-    color: #999;
+    color: #fff;
 }
 #theatreBtn {
     width: 141px;
@@ -172,10 +172,13 @@ a#prevButton {
     position: absolute;
 }
 .subtext1 {
+    width:70%;
+    text-align: center;
+    margin-top:5px;
     font-family: 'Roboto', sans-serif;
-    font-weight: 300;
-    font-size: 15px;
-    color: #fff;
+    font-weight: 400;
+    font-size: 12px;
+    color: #bababa;
 }
 .questions {
     font-family: 'Droid Serif', serif;
@@ -197,7 +200,7 @@ li {
     font-family: 'Roboto', sans-serif;
     font-weight: 100;
     font-size: 30px;
-    color: #999;
+    color: #19c712;
 }
 .upload {
     border: none;
@@ -236,16 +239,16 @@ li {
     line-height: 110%;
 }
 .programName {
-    display: inline-block;
-    float: right;
+    position:absolute;
+    z-index: -1;
     font-family: 'Roboto', sans-serif;
-    font-weight: 100;
+    font-weight: 300;
     font-size: 25px;
-    color: #999;
+    color: #e7e7e7;
     margin-right: 0px;
     line-height: 110%;
-    margin-top: 25px;
-    margin-right:50px;
+    margin-top: 113px;
+    margin-left:400px;
     
 }
 #progressBar {
