--- a/Website/css/ampdStyle.css
+++ b/Website/css/ampdStyle.css
@@ -16,23 +16,26 @@ body {
     margin-bottom: 20px;
 }
 #sideBar {
-    margin-top: 10px;
+    margin-top: 50px;
     position: absolute;
     width: 8px;
     height: 93px;
     background: url("http://i.imgur.com/HNdbMzl.jpg") no-repeat;
     background-size: 8px 93px;
 }
-#logout a{
-    right: 0;
-    position: absolute;
+#logout {
+    width:auto;
+    display: inline-block;
+    position:relative;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 15px;
-    color: #fff;
-    margin-right: 20px;
+    
     height: auto;
-    margin-top: -40px;
+    margin-top: -30px;
+}
+#logout a{
+    color: #fff;
 }
 .full {
     background-image: url("http://i.imgur.com/GOp7A1D.jpg");
@@ -73,6 +76,12 @@ h3 {
     font-weight: 100;
     font-size: 30px;
     color: #999;
+}
+h4{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    font-size: 20px;
+    color: black;
 }
 #overLine {
     background: url("http://i.imgur.com/QxNoGHd.png") no-repeat;
@@ -132,6 +141,13 @@ a#signin {
     font-size: 30px;
     color: #999;
 }
+a#continueButton {
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
+    font-size: 20px;
+    color: black;
+}
 a#nextButton {
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
@@ -153,10 +169,10 @@ a#prevButton {
     background: url("http://i.imgur.com/7ybgWnc.png") no-repeat;
     background-size: 141px 141px;
 }
-#musicBtn {
+#designBtn {
     width: 141px;
     height: 141px;
-    background: url("http://i.imgur.com/JA3x1HC.png") no-repeat;
+    background: url("http://i.imgur.com/BaAZeNa.png") no-repeat;
     background-size: 141px 141px;
 }
 #visualBtn {
@@ -262,4 +278,54 @@ li {
 
 .white {
     color:white;
+}
+
+<!-- new things below this-->
+
+
+/* Portrait tablets and medium desktops */
+@media (min-width: 992px) and (max-width: 1199px) {
+
+}
+
+/* Portrait tablets and small desktops */
+@media (min-width: 768px) and (max-width: 991px) {
+#sideCircle{
+visibility: hidden;
+}
+}
+
+/* Landscape phones and portrait tablets */
+@media (max-width: 767px) {
+#sideCircle{
+visibility: hidden;
+}
+}
+
+/* Landscape phones and smaller */
+@media (max-width: 480px) {
+#sideCircle{
+visibility: hidden;
+}
+}
+#swBtn {
+    width: 141px;
+    height: 141px;
+    background: url("http://i.imgur.com/8cFsseK.png") no-repeat;
+    background-size: 141px 141px;
+}
+
+#proBtn {
+    width: 141px;
+    height: 141px;
+    background: url("http://i.imgur.com/Mp6K8a9.png") no-repeat;
+    background-size: 141px 141px;
+}
+
+#register {
+    visibility: hidden;
+}
+
+#registerButt {
+    visibility: visible;
 }
