Added reg pages, fixed minor issues

--- a/Website/css/ampdStyle.css
+++ b/Website/css/ampdStyle.css
@@ -280,6 +280,11 @@ li {
     color:white;
 }
 
+.white a{
+ text-decoration: none;
+    color: white;
+}
+
 <!-- new things below this-->
 
 
@@ -321,11 +326,6 @@ visibility: hidden;
     background: url("http://i.imgur.com/Mp6K8a9.png") no-repeat;
     background-size: 141px 141px;
 }
-
-#register {
-    visibility: hidden;
-}
-
-#registerButt {
-    visibility: visible;
+.fa-pencil {
+    color: #ce301b;
 }
