--- a/Website/css/bootstrap.css
+++ b/Website/css/bootstrap.css
@@ -2461,7 +2461,7 @@ output {
 }
 .form-control:focus {
     border-color: #66afe9;
-    outline: 0;
+    outline: 10px;
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
 }
