--- a/Website/css/ampdStyle.css
+++ b/Website/css/ampdStyle.css
@@ -333,3 +333,13 @@ visibility: hidden;
 .fa-pencil {
     color: #ce301b;
 }
+
+#pageCount {
+    border: none;
+    background: none;
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
+    font-size: 20px;
+    color: white;
+}
