--- a/Website/css/bootstrap.css
+++ b/Website/css/bootstrap.css
@@ -5525,7 +5525,7 @@ button.close {
 }
 .modal-backdrop.fade {
     filter: alpha(opacity=0);
-    opacity: 0;
+    opacity: .9;
 }
 .modal-backdrop.in {
     filter: alpha(opacity=50);
