--- a/Website/css/ampdStyle.css
+++ b/Website/css/ampdStyle.css
@@ -47,12 +47,15 @@ body {
     min-height: 100%;
 }
 .program {
-    background-image: url("http://i.imgur.com/L3qOD3I.jpg");
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    min-height: 100%;
+    background-image: url("http://i.imgur.com/L3qOD3I.jpg");
+   background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center; 
+    
 }
 .va {
     background-image: url("http://i.imgur.com/4voNN7i.jpg");
@@ -152,6 +155,15 @@ a#signin {
     font-weight: 100;
     font-size: 30px;
     color: #999;
+}
+a#programButt {
+    float:right;
+    display:inline-block;
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    color: #797878;
 }
 a#continueButton {
     text-decoration: none;
@@ -373,4 +385,14 @@ visibility: hidden;
 
 .textCenter {
     text-align: center;
+}
+
+
+
+.statusComplete {
+    color: #4bd21c;
+}
+
+.fa-circle-thin {
+    color: #4bd21c;
 }
