--- a/Website/css/bootstrap.css
+++ b/Website/css/bootstrap.css
@@ -3859,6 +3859,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     border-top-right-radius: 0;
 }
 .navbar {
+    background-color:black;
     position: relative;
     min-height: 50px;
     margin-bottom: 20px;
@@ -4184,8 +4185,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     }
 }
 .navbar-default {
-    background-color: #f8f8f8;
-    border-color: #e7e7e7;
+    background-color: rgba(255,255,255,0.1);
+    margin-top:-50px;
+    
 }
 .navbar-default .navbar-brand {
     color: #777;
