--- a/Website/css/bootstrap.css
+++ b/Website/css/bootstrap.css
@@ -5465,6 +5465,26 @@ a.list-group-item-danger.active:focus {
     padding: 9px;
     border-radius: 3px;
 }
+.filewell {
+    
+    min-height: 20px;
+    padding: 0px;
+    margin-bottom: 5px;
+    background-color: #f5f5f5;
+    border: 1px solid #d9d9d9;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+}
+.filewell blockquote {
+    border-color: #ddd;
+    border-color: rgba(0, 0, 0, .15);
+}
+
+.filewell-sm {
+    padding: 4px;
+    border-radius: 3px;
+}
 .close {
     float: right;
     font-size: 21px;
