--- a/Website/css/bootstrap.css
+++ b/Website/css/bootstrap.css
@@ -5476,6 +5476,11 @@ a.list-group-item-danger.active:focus {
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
 }
+.blackLink{
+ text-decoration: none;
+    color: black;
+}
+
 .filewell blockquote {
     border-color: #ddd;
     border-color: rgba(0, 0, 0, .15);
