--- a/Website/css/ampdStyle.css
+++ b/Website/css/ampdStyle.css
@@ -317,6 +317,17 @@ li {
     margin-top:20px;
     margin-left:-80px;
 }
+.OnlineEvalProgramName {
+    position:absolute;
+    z-index: -1;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    font-size: 25px;
+    color: #e7e7e7;
+    line-height: 110%;
+    margin-top:20px;
+    margin-left:-250px;
+}
 #progressBar {
     visibility: hidden;
 }
