--- a/Website/css/ampdStyle.css
+++ b/Website/css/ampdStyle.css
@@ -132,37 +132,38 @@ a:active {
     margin-top: -10px;
 }
 .fa-angle-right {
-    color: #ce301b;
+    color: #db0000;
 }
 .fa-angle-left {
-    color: #ce301b;
+    color: #db0000;
 }
 .fa-caret-right {
-    color: #ce301b;
+    color: #db0000;
 }
 .fa-power-off {
-    color: #ce301b;
+    color: #db0000;
+    margin-right:10px;
 }
 .fa-question-circle {
-    color: #ce301b;
+    color: #db0000;
 }
 .fa-upload {
-    color: #ce301b;
+    color: #db0000;
 }
 .fa-home {
-    color: #ce301b;
+    color: #db0000;
 }
 .fa-dollar {
-    color: #ce301b;
+    color: #db0000;
 }
 .fa-book {
-    color: #ce301b;
+    color: #db0000;
 }
 .fa-cloud-upload {
-     color: #ce301b;
+     color: #db0000;
 }
 .fa-file-image-o {
-    color: #ce301b;
+    color: #db0000;
 }
 .fa-check-circle-o {
       color: #4bd21c;
@@ -185,6 +186,7 @@ a#programButt {
     color: #797878;
 }
 a#continueButton {
+    
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
     font-weight: 100;
@@ -275,6 +277,7 @@ li {
     font-size: 80px;
     color: #fff;
     line-height: 110%;
+    margin-top:20px;
 }
 .programName {
     position:absolute;
@@ -285,7 +288,7 @@ li {
     color: #e7e7e7;
     margin-right: 0px;
     line-height: 110%;
-    margin-top: 113px;
+    margin-top: 133px;
     margin-left:400px;
     
 }
@@ -297,7 +300,7 @@ li {
     font-size: 25px;
     color: #e7e7e7;
     line-height: 110%;
-    margin-top:20px;
+    margin-top:45px;
     margin-left:-80px;
 }
 .OnlineEvalProgramName {
@@ -308,7 +311,7 @@ li {
     font-size: 25px;
     color: #e7e7e7;
     line-height: 110%;
-    margin-top:20px;
+    margin-top:40px;
     margin-left:-250px;
 }
 #progressBar {
@@ -353,6 +356,7 @@ visibility: hidden;
     #messages{
 visibility: hidden;
 }
+    
 
 }
 
@@ -364,6 +368,11 @@ visibility: hidden;
      #messages{
 visibility: hidden;
 }
+    #ampdLogoText{
+    visibility: hidden;
+        height:0px;
+        margin-bottom:-15px;
+    }
 }
 
 /* Landscape phones and smaller */
@@ -374,6 +383,12 @@ visibility: hidden;
      #messages{
 visibility: hidden;
 }
+    #ampdLogoText{
+    visibility: hidden;
+        height:0px;
+        margin-bottom:-15px;
+        
+    }
 }
 
 
@@ -469,4 +484,29 @@ visibility: hidden;
     font-size: 15px;
     color: #898989;
 }
+
+
+#ampdLogo {
+    margin-left: 20px;
+    margin-top:-5px;
+    font-family: 'Archivo Narrow', sans-serif;
+    font-weight: 700;
+    font-size: 50px;
+    color: #db0000;
+}
+
+#ampdLogoText {
+   
+    margin-left:10px;
+    width:300px;
+    line-height: 1em;
+    margin-top:10px;
+    font-family: 'Archivo Narrow', sans-serif;
+    font-weight: 700;
+    font-size: 20px;
+    color: white;
+}
+
+
+
 
